# wenjuanxing-parser

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/wenjuanxing_parser/: __init__.py  __main__.py  loader.py  models.py
src/wenjuanxing_parser/_models/: __init__.py  answers.py  base.py  dataframe.py  questions.py  response.py
tests/: _benchmark_validate.py  _generate_json_schema.py  test_old_questionnaire.py  test_parser.py
